--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
   google_fonts: ^1.1.1
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - animations/splash_screen.json
+    - assets/images/intro_1.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
