--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
   flutter_swiper: ^1.1.6
+  font_awesome_flutter: ^8.11.0
+  provider: ^4.3.2+3
+  google_sign_in: ^4.5.6
+  cloud_firestore: ^0.14.4
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
