--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_sign_in: ^4.5.6
   cloud_firestore: ^0.14.4
   intl: ^0.16.1
+  bubble_bottom_bar: ^1.2.0
 
 dev_dependencies:
   flutter_test:
