--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^0.14.4
   intl: ^0.16.1
   bubble_bottom_bar: ^1.2.0
+  flutter_rating_bar: ^3.2.0+1
 
 dev_dependencies:
   flutter_test:
