--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - animations/splash_screen.json
-    - assets/images/intro_1.png
-    - assets/images/intro_2.png
-    - assets/images/intro_3.png
+    - assets/images/
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
