--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.16.1
   bubble_bottom_bar: ^1.2.0
   flutter_rating_bar: ^3.2.0+1
+  flutter_svg: ^0.19.1
 
 dev_dependencies:
   flutter_test:
