--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   bubble_bottom_bar: ^1.2.0
   flutter_rating_bar: ^3.2.0+1
   flutter_svg: ^0.19.1
+  flutter_custom_clippers: ^1.1.2
 
 dev_dependencies:
   flutter_test:
