--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,9 +76,9 @@ flutter:
     - family: Berkshire
       fonts:
         - asset: assets/fonts/BerkshireSwash-Regular.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Arima
+      fonts:
+        - asset: assets/fonts/ArimaMadurai-Medium.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
