--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rating_bar: ^3.2.0+1
   flutter_svg: ^0.19.1
   flutter_custom_clippers: ^1.1.2
+  image_picker: ^0.6.7+17
 
 dev_dependencies:
   flutter_test:
